objects/sfcma__SubscriptionPlan__c.object
<CustomObject>
    <description>Contains information about the pricing model of an offering. For example, site-wide or per user, billed monthly.</description>
    <fields>
        <fullName>sfcma__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the plan is still active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__AdditionalDetails__c</fullName>
        <description>Used to optionally highlight any additional information about the pricing of this application to customers.</description>
        <label>Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfcma__Amount__c</fullName>
        <description>Charge price for Subscription Plan</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfcma__Currency__c</fullName>
        <description>Currency for the Charge</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__Frequency__c</fullName>
        <description>Frequency for the charge of the listing</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__ListingName__c</fullName>
        <label>Listing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__StripeSubscriptionPlanIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Stripe Id for Subscription Plans</description>
        <externalId>true</externalId>
        <label>Stripe Subscription Plan Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfcma__StripeSubscriptionPlanId__c</fullName>
        <description>External Stripe Id for Subscription Plans</description>
        <externalId>true</externalId>
        <label>Stripe Subscription Plan Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__TrialPeriodDays__c</fullName>
        <description>The number of days in which the customer can trial.</description>
        <label>Trial Period Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Checkout Subscription Plan</label>
    <listViews>
        <fullName>sfcma__All</fullName>
        <columns>NAME</columns>
        <columns>sfcma__ListingName__c</columns>
        <columns>sfcma__AdditionalDetails__c</columns>
        <columns>sfcma__Frequency__c</columns>
        <columns>sfcma__Active__c</columns>
        <columns>sfcma__Amount__c</columns>
        <columns>sfcma__Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Checkout Subscription Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checkout Subscription Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>